# Score

./: .classpath  .gitignore  .gitmodules  .project  LICENSE  LICENSE.txt  README.md  docker-compose.dev.yml  pom.xml  tenant_tables.sql
connect-center-api/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  docs-server.sh  pyproject.toml  pytest.ini  server.sh
connect-center-api/app/: __init__.py  database.py  deps.py  main.py  security.py  settings.py
connect-center-api/app/repositories/: __init__.py  vendor_plugins.py
connect-center-api/app/routes/: __init__.py  agency_id_list.py  app_user.py  biz_ctx.py  business_information_entity.py  code_list.py  core_component.py  ctx_category.py  ctx_scheme.py  data_type.py  health.py  library.py  namespace.py  release.py  tag.py  xbt.py
connect-center-api/app/services/: __init__.py  agency_id_list_service.py  app_user_service.py  bie_state_transition_service.py  biz_ctx_service.py  business_information_entity_service.py  code_list_service.py  core_component_service.py  ctx_category_service.py  ctx_scheme_service.py  data_type_service.py  library_service.py  namespace_service.py  release_service.py  tag_service.py  xbt_service.py
connect-center-api/app/tools/: __init__.py  agency_id_list.py  app_user.py  biz_ctx.py  business_information_entity.py  code_list.py  core_component.py  ctx_category.py  ctx_scheme.py  data_type.py  library.py  namespace.py  release.py  tag.py  xbt.py
connect-center-api/app/types/: identifiers.py  unset.py
connect-center-api/app/utils/: __init__.py  core_component_constants.py  date.py
connect-center-api/docker/: Dockerfile  build.sh  supervisord.conf
connect-center-api/docs/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
connect-center-api/docs/app/: globals.css  layout.tsx  page.tsx
connect-center-api/docs/components/: copy-button.tsx  docs-sidebar.tsx  (+6 more)
score-mcp-server/: .dockerignore  .env.example  .gitignore  README.md  auth.py  database.py  main.py  middleware.py  pyproject.toml  start.sh
score-mcp-server/docker/: DOCKER.md  Dockerfile  docker-compose-example.yml  start.sh  supervisord.conf
score-mcp-server/services/: __init__.py  agency_id_list.py  app_user.py  biz_ctx.py  business_information_entity.py  cache.py  code_list.py  core_component.py  ctx_category.py  ctx_scheme.py  data_type.py  library.py  namespace.py  release.py  tag.py  transaction.py  utils.py  xbt.py
score-mcp-server/tests/: conftest.py  test_agency_id_list.py  test_app_user.py  test_biz_ctx.py  test_business_information_entity.py  test_business_information_entity_required_fields.py  test_business_information_entity_value_constraints.py  test_business_information_entity_version_sync.py  test_code_list.py  test_core_component.py  test_ctx_category.py  test_ctx_scheme.py  test_data_type.py  test_guid_validation.py  test_library.py  test_namespace.py  test_release.py  test_tag.py  test_transfer_bie_ownership.py  test_xbt.py
score-mcp-server/tools/: __init__.py  agency_id_list.py  app_user.py  biz_ctx.py  business_information_entity.py  code_list.py  core_component.py  ctx_category.py  ctx_scheme.py  data_type.py  library.py  namespace.py  release.py  tag.py  utils.py  xbt.py
(+20505 files in other folders)
