[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connect-center-api"
version = "0.1.0"
description = "connectCenter API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "fastmcp>=3.1.1,<4",
  "uvicorn[standard]>=0.27,<1",
  "SQLAlchemy[asyncio]>=2.0,<3",
  "asyncmy>=0.2,<1",
  "pydantic-settings>=2.2,<3",
  "bcrypt>=3.2,<5",
  "httpx>=0.27,<1",
  "PyJWT[crypto]>=2.8,<3",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.20,<1"]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-env>=1.1,<2",
  "pytest-xdist>=3.6,<4",
  "ruff>=0.9,<1",
  "pydoclint>=0.8,<1",
]
all = [
  "aiosqlite>=0.20,<1",
]

[project.entry-points."connect_center_backend.vendors"]
# In a true "separate distributions" setup, these entry points would live in
# separate vendor packages. For this repo we keep them here (single distribution).
mariadb = "app.repositories.vendors.mariadb.plugin:PLUGIN"
sqlite = "app.repositories.vendors.sqlite.plugin:PLUGIN"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
