[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connect-center-api"
version = "0.1.0"
description = "connectCenter API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.3,<1",
  "fastmcp>=3.4.2,<4",
  "uvicorn[standard]>=0.49.0,<1",
  "SQLAlchemy[asyncio]>=2.0.50,<3",
  "asyncmy>=0.2.11,<1",
  "pydantic-settings>=2.14.1,<3",
  "bcrypt>=5.0.0,<6",
  "httpx>=0.28.1,<1",
  "PyJWT[crypto]>=2.13.0,<3",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.22.1,<1"]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.4.0,<2",
  "pytest-env>=1.6.0,<2",
  "pytest-xdist>=3.8.0,<4",
  "ruff>=0.15.16,<1",
  "pydoclint>=0.8.6,<1",
]
all = [
  "aiosqlite>=0.22.1,<1",
]

[project.entry-points."connect_center_backend.vendors"]
# In a true "separate distributions" setup, these entry points would live in
# separate vendor packages. For this repo we keep them here (single distribution).
mariadb = "app.repositories.vendors.mariadb.plugin:PLUGIN"
sqlite = "app.repositories.vendors.sqlite.plugin:PLUGIN"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
